Update List offer to be filterable